[tool.poetry]
name = "generic-middleware-pipeline-python"
version = "0.1.0"
description = ""
authors = ["Pete Otaqui <pete@otaqui.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
